--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@ body {
     color: var(--icon-color);
   }
 
+  .pull-right {
+    margin-left: auto;
+  }
+
   --bg-primary: #eef1f5;
   --bg-navbar: var(--bg-primary);
   --navbar-text-color: var(--text-color);
