--- a/src/components/UI/MarkdownEditor/MarkdownEditor.scss
+++ b/src/components/UI/MarkdownEditor/MarkdownEditor.scss
@@ -1,7 +1,7 @@
 .markdown-preview {
   overflow-y: auto;
   cursor: pointer;
-  p { margin-bottom: 16px; margin-top: 0; }
+  ul, p { margin-bottom: 0.5em; margin-top: 0; }
   min-height: 1em;
   text-align: initial;
 }
