--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 html {
   height: 100%;
 }
@@ -18,6 +32,18 @@ body {
 
   .pull-right {
     margin-left: auto;
+    align-items: flex-end;
+    display: flex;
+  }
+
+  .row {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+  }
+
+  .col {
+    flex-direction: column;
   }
 
   --bg-primary: #eef1f5;
@@ -33,13 +59,13 @@ body {
   --column-shadow: 0px 0px 6px 0px rgba(98, 98, 102, 0.16);
   --text-color: black;
   --text-bg-color: #f0f0f0;
-  --icon-color: black;
+  --icon-color: #72767b;
   --icon-hover: var(--card-hover);
   --button-color: var(--text-bg-color);
   --button-hover: var(--card-hover);
-  --modal-icon-color: rgb(26, 25, 25);
+  --modal-icon-color: var(--icon-color);
   --login-primary: var(--card-primary);
-  --login-icon-bg-color: #dddddd;
+  --login-icon-bg-color: #var(--icon-color);
   --login-icon-color: black;
   --login-button-bg-color: var(--login-icon-bg-color);
   --login-button-color: black;
