Soften the login icon bg color

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,7 +64,7 @@ body {
   --button-hover: var(--card-hover);
   --modal-icon-color: var(--icon-color);
   --login-primary: var(--card-primary);
-  --login-icon-bg-color: #var(--icon-color);
+  --login-icon-bg-color: #dddddd;
   --login-icon-color: black;
   --login-button-bg-color: var(--login-icon-bg-color);
   --login-button-color: black;
