--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -13,8 +13,16 @@
   .navbar-list-container {
     display: flex;
   }
-  div.navbar-top-right {
-    width: 65px;
+  div.navbar-top-left {
+    width: 54px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    img {
+      width: 40px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
   ul.menu {
     height: 5em;
