--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -32,26 +32,16 @@
     z-index: 20;
     display: flex;
     width: 100%;
-    .card-row {
-      width: 100%;
-      .card-title {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        .right-side {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-end;
-          .card-icon-row {
-            margin-top: 5px;
-          }
-          #vote-container {
-            .vote-tracker {
-              padding: 3px 5px;
-              height: 17px;
-            }
-          }
-        }
+    .card-icon-row {
+      margin-top: 5px;
+      svg {
+        margin-left: 5px;
+      }
+    }
+    #vote-container {
+      .vote-tracker {
+        padding: 3px 5px;
+        height: 17px;
       }
     }
   }
