Update svgs to use primary and secondary icon colors. Update min-height of empty column to 50px. Clean up some code in IconRow.

--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -32,8 +32,12 @@
   background: var(--modal-bg-color);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
-  svg:not([color]) {
-    color: var(--modal-icon-color);
+  svg:not(.secondary) {
+    color: var(--icon-primary-color);
+  }
+
+  svg:not([color] .secondary) {
+    color: var(--icon-secondary-color);
   }
 }
 
