Simplify/fix navbar configuration better handle HTTP 403 on board

--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -30,6 +30,9 @@
     padding: 0px;
     list-style: none;
     justify-content: space-between;
+    div {
+      flex-basis: 0;
+    }
     .brand {
       font-size: 2.8em;
       font-family: "Lora";
