--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,9 @@ body {
 
   .pull-right {
     margin-left: auto;
+    &:not(.col) {
+      justify-content: flex-end;
+    }
   }
 
   .row {
@@ -50,6 +53,7 @@ body {
 
   .grow {
     flex-grow: 1;
+    flex-basis: 0;
   }
 
   .flex {
