--- a/src/index.scss
+++ b/src/index.scss
@@ -93,6 +93,8 @@ body {
   --login-input-focus: black;
   --tooltip-text-color: #ffffff;
   --tooltip-bg-color: #222;
+  --landing-border:var(--card-border);
+  --landing-hover: var(--card-hover);
 }
 
 #root,
