--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -6,11 +6,6 @@
     margin: 2em;
     padding: 1em;
     box-shadow: var(--bg-shadow);
-    cursor: pointer;
-    &:hover {
-      background-color: var(--icon-hover);
-      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
-    }
     .board-icon,
     .board-info {
       padding: 1em;
@@ -25,10 +20,17 @@
       border: 1px solid var(--card-border);
     }
     .board-info {
-      .board-title,
-      .board-user-role {
+      div {
         margin: 1rem;
         text-align: left;
+      }
+      .board-link {
+        font-size: 0.7em;
+        font-style: italic;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+        display: inline;
       }
       .board-title {
         font-size: 1.5em;
