--- a/src/components/UI/BoardComponents/Filter/Filter.scss
+++ b/src/components/UI/BoardComponents/Filter/Filter.scss
@@ -1,32 +1,55 @@
 #filter-container {
-  width: 500px;
+  width: 480px;
+  // margin: 0px 10px;
   label {
     display: flex;
     padding: 10px;
     font-size: 1.1em;
   }
-  .filter-selected-filters {
-    border-top: 1px solid lightgray;
+  .filter-filters-inputs {
     margin-bottom: 20px;
   }
-  .button-group-modes {
-    padding-left: 10px;
-    padding-top: 10px;
+  #title-wrapper-container {
+    input {
+      width: 100%;
+    }
+  }
+  .selection-ul {
+    min-height: 100px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
     display: flex;
-  }
-
-  .button-basic {
-    margin-right: 10px;
-  }
-
-  .button-basic,
-  .button-advanced {
-    border: none;
-    outline: none;
-    padding: 10px 16px;
-    border-radius: 10px;
-    background-color: #f1f1f1;
-    border: 1px solid lightgray;
-    cursor: pointer;
+    flex-wrap: wrap;
+    align-items: center;
+    overflow-x: hidden;
+    overflow-y: auto;
+    li {
+      display: flex;
+      justify-content: space-around;
+      width: 50%;
+      .option-container {
+        background-color: var(--button-color);
+        border: 1px solid var(--card-border);
+        border-radius: 10px;
+        width: 100%;
+        margin-right: 5%;
+        height: 25px;
+        padding: 5px;
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        .tags-label {
+          margin: 0 10px;
+        }
+      }
+      &:hover {
+        .option-container {
+          margin-left: 3%;
+          margin-right: 2%;
+        }
+      }
+    }
   }
 }
