--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -1,6 +1,6 @@
 #card-draggable {
-  margin: -1px;
-  border: 1px solid var(--card-border);
+  // margin: -1px;
+  // border: 1px solid var(--card-border);
   padding: 5px;
   display: flex;
   align-items: flex-start;
