--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -5,13 +5,13 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  box-shadow: var(--column-shadow);
+  border-radius: 5px 5px 0 0;
   .column-empty {
     min-height: 50px;
   }
   .column-container {
     background-color: var(--column-primary);
-    box-shadow: var(--column-shadow);
-    border: 1px solid var(--card-border);
     border-radius: 5px 5px 0 0;
   }
   .column-header {
@@ -45,8 +45,6 @@
   }
 
   #column-droppable {
-    margin: -1px;
-    border: 1px solid var(--card-border);
     transition: background-color 0.2s ease;
   }
 }
