--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -1,11 +1,12 @@
 #boards-content {
   .board {
-    border: 1px solid var(--card-border);
+    border: 1px solid var(--landing-border);
     font-size: 1.5em;
     font-weight: 700;
-    margin: 2em;
-    padding: 1em;
+    margin: 1em;
+    padding: 0 1em;
     box-shadow: var(--bg-shadow);
+    align-items: center;
     .board-icon,
     .board-info {
       padding: 1em;
@@ -15,9 +16,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      min-width: 130px;
+      min-width: 10px;
+      max-width: 10px;
+      max-height: 10px;
       box-shadow: var(--bg-shadow);
-      border: 1px solid var(--card-border);
+      border: 1px solid var(--landing-border);
+      font-size: 3em;
     }
     .board-info {
       div {
@@ -34,6 +38,21 @@
       }
       .board-title {
         font-size: 1.5em;
+      }
+    }
+  }
+  .new-board {
+    padding: 1em 1em 0 0;
+    button {
+      border: 1px solid var(--landing-border);
+      padding: 10px 20px;
+      border-radius: 5px 20px;
+      cursor: pointer;
+      font-weight: 700;
+      background-color: var(--button-color);
+      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
+      &:focus {
+        outline: 0;
       }
     }
   }
