--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -2,20 +2,23 @@
   margin: 20px 10px 10px 5px;
   min-width: 300px;
   max-width: 300px;
+  height: fit-content;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   box-shadow: var(--column-shadow);
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px;
   .column-empty {
     min-height: 50px;
   }
   .column-container {
-    background-color: var(--column-primary);
+    background-color: var(--column-secondary);
     border-radius: 5px 5px 0 0;
   }
   .column-header {
-    border-bottom: 1px solid var(--card-border);
+    box-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
+    background-color: var(--column-primary);
     padding: 8px;
     margin: 0 0 0 0;
     display: flex;
