--- a/src/index.scss
+++ b/src/index.scss
@@ -68,7 +68,7 @@ body {
   }
 
   --bg-primary: #eef1f5;
-  --bg-navbar: var(--bg-primary);
+  --bg-navbar: var(--card-primary);
   --navbar-text-color: var(--text-color);
   --modal-bg-color: var(--card-primary);
   --bg-shadow: 0px 0px 13px 0px rgba(98, 98, 102, 0.24);
@@ -76,7 +76,8 @@ body {
   --card-primary: #ffffff;
   --card-hover: #ebebeb;
   --column-hover: var(--card-hover);
-  --column-primary: var(--bg-primary);
+  --column-primary: var(--bg-navbar);
+  --column-secondary: var(--bg-primary);
   --column-shadow: 0px 0px 6px 0px rgba(98, 98, 102, 0.32);
   --text-color: black;
   --text-bg-color: #f0f0f0;
