--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -24,7 +24,6 @@
     }
   }
   ul.menu {
-    height: 5em;
     margin: 0;
     align-items: center;
     padding: 0px;
@@ -32,6 +31,7 @@
     justify-content: space-between;
     div {
       flex-basis: 0;
+      flex-wrap: wrap;
     }
     .brand {
       font-size: 2.8em;
@@ -75,6 +75,73 @@
       border-radius: 5px 20px;
       margin: 0 15px;
     }
+
+    @media only screen and (max-width: 800px) {
+      .brand {
+        font-size: 2.5em;
+      }
+      li {
+        padding: 10px 0px;
+      }
+    }
+
+    @media only screen and (max-width: 600px) {
+      .brand {
+        font-size: 2em;
+      }
+      li {
+        padding: 10px 15px;
+      }
+    }
+
+    @media only screen and (min-width: 300px) {
+      li {
+        margin: 0px;
+        padding: 10px 15px;
+      }
+    }
+
+    @media only screen and (min-width: 520px) {
+      li {
+        padding: 10px 20px;
+      }
+    }
+    @media only screen and (min-width: 660px) {
+      li {
+        padding: 10px 25px;
+      }
+    }
+
+    @media only screen and (min-width: 730px) {
+      li {
+        padding: 10px 15px;
+        margin: 0 20px;
+      }
+    }
+
+    @media only screen and (min-width: 900px) {
+      li {
+        padding: 10px 15px;
+        margin: 0 5px;
+      }
+    }
+
+    @media only screen and (min-width: 1200px) {
+      li {
+        margin: 0 15px;
+      }
+    }
+
+    @media only screen and (max-width: 450px) {
+      .brand {
+        font-size: 1em;
+        padding: 0;
+      }
+      li {
+        padding: 10px 10px;
+      }
+    }
+
     li:not(.brand) {
       cursor: pointer;
     }
