Update markdown editor to make it more mobile responsive.

--- a/src/components/UI/BoardComponents/Card/components/Comments.scss
+++ b/src/components/UI/BoardComponents/Card/components/Comments.scss
@@ -42,6 +42,7 @@
   }
 
   .comment-entry-text-container {
+    word-break: break-word;
     display: flex;
     flex-direction: column;
     .comment-entry-text {
