--- a/src/components/Pages/Login/Views/SignIn.scss
+++ b/src/components/Pages/Login/Views/SignIn.scss
@@ -1,5 +1,10 @@
 #signin-container {
   width: 500px;
+
+  @media only screen and (max-width: 550px) {
+    width: inherit;
+  }
+
   .signin-inner {
     padding: 18px;
     margin-bottom: 1px;
