Update landing page css to be more responsive.

--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -1,7 +1,7 @@
 #boards-content {
   .board {
     border: 1px solid var(--landing-border);
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 700;
     margin: 1em;
     padding: 0 1em;
@@ -41,13 +41,14 @@
     }
   }
   .new-board {
-    padding: 1em 1em 0 0;
+    padding: 1em 0 0 1em;
     button {
       border: 1px solid var(--landing-border);
       padding: 10px 20px;
       border-radius: 5px 20px;
       cursor: pointer;
       font-weight: 700;
+      color: var(--text-color);
       background-color: var(--button-color);
       box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
       &:focus {
