--- a/src/components/Pages/Landing/content/CreateBoard.scss
+++ b/src/components/Pages/Landing/content/CreateBoard.scss
@@ -1,5 +1,8 @@
 #create-board {
   width: 500px;
+  @media only screen and (max-width: 550px) {
+    width: 340px;
+  }
   .create-board-header {
     font-size: 1.6em;
     text-align: center;
