--- a/src/components/Pages/Landing/index.scss
+++ b/src/components/Pages/Landing/index.scss
@@ -3,14 +3,14 @@
   overflow-y: hidden;
   #tabs {
     box-shadow: var(--bg-shadow);
-    margin: 1.5em;
+    margin: 1em;
     flex-grow: 1;
     flex-basis: 0;
-    max-width: 400px;
+    max-width: 300px;
     overflow-y: auto;
     .tab {
       border: 1px solid var(--landing-border);
-      font-size: 1.5em;
+      font-size: 1.25em;
       font-weight: 700;
       text-align: left;
       margin: 1em;
@@ -29,10 +29,28 @@
   }
   #content {
     overflow-y: auto;
+    overflow-x: hidden;
     box-shadow: var(--bg-shadow);
-    margin: 1.5em;
+    margin: 1em;
     margin-left: 0;
     flex-grow: 1;
     flex-basis: 0;
+  }
+
+  @media only screen and (max-width: 800px) {
+    flex-direction: column;
+    #tabs {
+      max-width: none;
+      flex-grow: 0;
+      flex-basis: auto;
+      margin: 0;
+      .tab {
+        margin: 0.75em;
+        padding: 1em;
+      }
+    }
+    #content {
+      margin: 1em 0 0 0;
+    }
   }
 }
