--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -11,9 +11,12 @@
 
 .Modal {
   outline: none;
-  position: absolute;
-  top: 7%;
-  left: 50%;
+  position: relative;
+  width: 80%;
+  max-width: 500px;
+  top: 12%;
+  margin-left: auto;
+  margin-right: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -23,7 +26,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  display: grid;
+  // display: grid;
   justify-content: center;
   align-items: center;
 }
