--- a/src/components/UI/Navbar/components/Delete/index.scss
+++ b/src/components/UI/Navbar/components/Delete/index.scss
@@ -1,5 +1,7 @@
 #delete-popup {
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   .component-less {
     padding: 0 10px;
