Small css change for filter add button.

--- a/src/components/UI/BoardComponents/Filter/Basic.scss
+++ b/src/components/UI/BoardComponents/Filter/Basic.scss
@@ -10,6 +10,8 @@
     }
     .filters-group-button-add {
       width: 50px;
+      display: flex;
+      justify-content: center;
     }
     .filters-group-button-active {
       background-color: #4797e7;
