--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -16,6 +16,7 @@
     background-color: var(--column-secondary);
     border-radius: 5px 5px 0 0;
   }
+
   .column-header {
     box-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
     background-color: var(--column-primary);
@@ -23,25 +24,25 @@
     margin: 0 0 0 0;
     display: flex;
     align-items: center;
-
     .title {
       text-align: center;
       flex: 1 0 auto;
       font-size: 1.2em;
       display: flex;
     }
-
     .card-number {
       margin-right: 5px;
     }
-
     .add-card {
       display: flex;
       visibility: visible;
       transition: opacity 0.8s linear;
       opacity: 1;
     }
-    &:hover {
+  }
+
+  &.draggable {
+    .column-header:hover {
       transition: background-color 0.35s ease-out;
       background-color: var(--card-hover);
     }
