--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -23,6 +23,8 @@
   div.navbar-top-left {
     width: 54px;
     display: flex;
+    position: absolute;
+    top: 8px;
   }
   @media (max-width: 500px) {
     div.navbar-top-left {
@@ -32,6 +34,7 @@
 
   ul.menu {
     margin: 0;
+    margin-left: 50px;
     align-items: center;
     padding: 0px;
     list-style: none;
@@ -134,6 +137,12 @@
 
     .active-filter {
       padding-right: 76px;
+    }
+  }
+
+  @media (max-width: 500px) {
+    ul.menu {
+      margin-left: 0;
     }
   }
 }
