--- a/src/components/Pages/Board/Views/List.scss
+++ b/src/components/Pages/Board/Views/List.scss
@@ -1,17 +1,18 @@
 #list-board {
   display: flex;
   justify-content: center;
-  overflow-y: auto;
-  overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
+  max-height: 100%;
   .list-col-is-dragging {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
     background-color: var(--card-hover) !important;
     border: none !important;
   }
   #column-droppable {
-    width: 700px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100%;
   }
 }
