Create reusable menu component. Update landing page and board settings component with menu component.

--- a/src/index.scss
+++ b/src/index.scss
@@ -100,8 +100,8 @@ body {
   --login-input-focus: black;
   --tooltip-text-color: #ffffff;
   --tooltip-bg-color: #222;
-  --landing-border: var(--card-border);
-  --landing-hover: var(--card-hover);
+  --menu-border: var(--card-border);
+  --menu-hover: var(--card-hover);
 }
 
 #root,
