--- a/src/components/UI/Navbar/components/BoardSettings/index.scss
+++ b/src/components/UI/Navbar/components/BoardSettings/index.scss
@@ -6,60 +6,12 @@
 }
 
 #board-settings {
+  min-height: 500px;
   h1 {
     margin-left: auto;
     margin-right: auto;
   }
   #container {
-    border: 1px solid black;
     height: 500px;
-    #section {
-      flex: 0 0 150px;
-      border-right: 1px solid black;
-      padding: 10px;
-      .section-headers {
-        border: 1px solid var(--landing-border);
-        box-shadow: var(--bg-shadow);
-        cursor: pointer;
-        padding: 5px;
-        margin: 5px auto;
-        &:hover:not(.active) {
-          background-color: var(--landing-hover);
-          box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
-        }
-        &:first-child {
-          margin-top: 0;
-        }
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
-      .active {
-        background-color: var(--landing-hover);
-        box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
-      }
-    }
-    #content {
-      flex-grow: 5;
-      padding: 10px;
-      #section-content {
-        margin: 10px 0;
-        &:first-child {
-          margin-top: 0;
-        }
-        &:last-child {
-          margin-bottom: 0;
-        }
-        label {
-          font-weight: 700;
-        }
-        div {
-          margin-top: 5px;
-          input {
-            width: 100%;
-          }
-        }
-      }
-    }
   }
 }
