--- a/src/components/UI/PageComponents/TwoSectionMenu/index.scss
+++ b/src/components/UI/PageComponents/TwoSectionMenu/index.scss
@@ -4,10 +4,10 @@
     margin: 1em;
     flex-grow: 1;
     flex-basis: 0;
-    max-width: 200px;
+    max-width: 175px;
     overflow-y: auto;
     .menu-tab {
-      border: 1px solid var(-menu-border);
+      border: 1px solid var(--menu-border);
       font-size: 1.25em;
       text-align: left;
       margin: 0.5em;
@@ -28,26 +28,29 @@
     overflow-y: auto;
     overflow-x: hidden;
     box-shadow: var(--bg-shadow);
+    padding: 0.5em;
     margin: 1em;
     margin-left: 0;
     flex-grow: 1;
     flex-basis: 0;
   }
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 850px) {
     flex-direction: column;
     #menu-tabs {
+      display: flex;
       max-width: none;
       flex-grow: 0;
       flex-basis: auto;
       margin: 0;
+      font-size: 0.8em;
       .tab {
         margin: 0.75em;
         padding: 1em;
       }
     }
     #content {
-      margin: 1em 0 0 0;
+      margin: 0.5em 0 0 0;
     }
   }
 }
