Add handling of backend password reset

--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -120,8 +120,10 @@
       div {
         justify-content: space-evenly;
       }
+    }
+    @media (min-width: 1000px) {
       li {
-        padding: 10px 10px;
+        padding: 10px 20px;
       }
     }
 
