--- a/src/components/UI/Navbar/components/BoardSettings/index.scss
+++ b/src/components/UI/Navbar/components/BoardSettings/index.scss
@@ -7,9 +7,8 @@
 
 #board-settings {
   min-height: 500px;
-  h1 {
-    margin-left: auto;
-    margin-right: auto;
+  h2 {
+    margin: 10px;
   }
   #container {
     height: 500px;
