Small css changefor a tags.

--- a/src/index.scss
+++ b/src/index.scss
@@ -80,6 +80,15 @@ body {
     }
   }
 
+  a {
+    font-size: 0.9em;
+    font-style: italic;
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+    display: inline;
+  }
+
   --bg-primary: #eef1f5;
   --bg-navbar: var(--card-primary);
   --navbar-text-color: var(--text-color);
