More dark theme updates for cards/columns.

--- a/src/index.scss
+++ b/src/index.scss
@@ -150,6 +150,7 @@ body {
   --card-border: lightgrey;
   --card-primary: #ffffff;
   --card-hover: #ebebeb;
+  --card-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
   --column-hover: var(--card-hover);
   --column-primary: var(--bg-navbar);
   --column-secondary: var(--bg-primary);
