--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -1,7 +1,7 @@
 #card-draggable {
   margin: 8px 8px 8px 8px;
   border-radius: 5px;
-  box-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
+  box-shadow: var(--card-shadow);
   padding: 5px;
   display: flex;
   align-items: flex-start;
