Users endpoint shows activity

--- a/src/components/Pages/User/index.scss
+++ b/src/components/Pages/User/index.scss
@@ -1,6 +1,7 @@
-#user {
-  #user-container {
-    height: 95%;
-    background: lightgray;
+#user-profile {
+  margin-top: 20px;
+  .avatar {
+    font-size: 1000%;
+    margin-right: 20px;
   }
 }
