Fix some modal margins. Create Segment component. Add Segment component to no UserActivity / no UserCard items.

--- a/src/components/UI/Modal/ModalContainer/index.scss
+++ b/src/components/UI/Modal/ModalContainer/index.scss
@@ -1,11 +1,11 @@
-#navbar-container {
-  .navbar-header {
+#modal-container {
+  .modal-header {
     h2 {
       margin: 10px auto;
     }
     box-shadow: var(--bg-shadow);
   }
-  .navbar-margin {
+  .modal-margin {
     margin: 10px;
   }
 }
