--- a/src/components/UI/PageComponents/Form/Form.scss
+++ b/src/components/UI/PageComponents/Form/Form.scss
@@ -1,22 +1,32 @@
-#input-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-items: center;
-  margin-bottom: 20px;
-  .input-field {
+#form {
+  button {
+    text-align: center;
+    font-weight: bold;
     width: 100%;
+    border: none;
     padding: 10px;
+    font-size: 1.2em;
+    opacity: 0.9;
+  }
+}
+
+#input-container {
+  font-size: 1.1em;
+  label { padding: 5px; }
+  padding: 10px;
+  .input-field {
+    font-size: inherit;
+    width: 100%;
     outline: none;
-    font-size: 1.1em;
+    padding-left:10px;
   }
   .input-field:focus {
     border: 1px solid var(--login-input-focus);
   }
   .input-icon {
     text-align: center;
-    font-size: 1.1em;
     padding: 12px;
+    width: 20px;
     background: var(--login-icon-bg-color);
     svg {
       color: var(--login-icon-color);
