Fix tsconfig paths, begin columns board settings

--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -17,9 +17,7 @@
   &.large{
     max-width: 1000px;
   }
-  top: 12%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 5% auto;
 }
 
 .inner-content {
