--- a/src/components/UI/PageComponents/TwoSectionMenu/index.scss
+++ b/src/components/UI/PageComponents/TwoSectionMenu/index.scss
@@ -1,9 +1,8 @@
 #two-section-menu {
+  height: 100%;
   #menu-tabs {
     box-shadow: var(--bg-shadow);
-    flex-grow: 1;
-    flex-basis: 0;
-    max-width: 175px;
+    width: 175px;
     overflow-y: auto;
     .menu-tab {
       border: 1px solid var(--menu-border);
@@ -27,7 +26,6 @@
     overflow-x: hidden;
     overflow-y: auto;
     flex-grow: 1;
-    flex-basis: 0;
     height: 100%;
   }
 
@@ -35,7 +33,7 @@
     flex-direction: column;
     #menu-tabs {
       display: flex;
-      max-width: none;
+      width: initial;
       flex-grow: 0;
       flex-basis: auto;
       margin: 0;
